--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -23,11 +23,11 @@
 
 .dark-theme {
   --font-icon-color: #ffffff;
-  --body-bg: #000428;
-  --bg-white: #212f48;
-  --bg-sidebar: #212f48;
+  --body-bg: #181c23;
+  --bg-white: #393E46;
+  --bg-sidebar: #393E46;
   --sidebar-text-color: #ffffff;
-  --bg-secondary: #2b3b58;
+  --bg-secondary: #101826;
   --text-color: #fff;
   --border-color: #fafafa;
   --nav-shadow: #1c1c1c;
@@ -39,7 +39,7 @@
   --link-bg: #333333;
   --scroll-color: #e41e1d;
   --blue-text: #1d1f55;
-  --card-bg: #212f48;
+  --card-bg: #393E46;
   --box-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
 }
 
