--- a/src/app/@shared/modals/video-post-modal/video-post-modal.component.html
+++ b/src/app/@shared/modals/video-post-modal/video-post-modal.component.html
@@ -180,7 +180,7 @@
       <h5>
         It will take a while to upload long videos or if your internet connection is bad.
         You MUST keep your browser tab open to avoid interruptions. 
-        If you close this browser tab, you video will stop uploading. 
+        If you close this browser tab, your video will stop uploading. 
       </h5>
     </div>
     <div class="osahan-progress">
